Changes done Thursday, April 4th

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,24 @@ speedtest
 2013-03-26/
 2013-03-26_backup/
 sample_rename_to_date/
+2001-01-01 (copy)/
+2001-01-01/11va_video.wmv
+2001-01-01/11vb_video.wmv
+2001-01-01/11vc_video.wmv
+2001-01-01/4_5va_video.wmv
+2001-01-01/4_5vb_video.wmv
+2001-01-01/4va_video.wmv
+2001-01-01/4vb_video.wmv
+2001-01-01/4vc_video.wmv
+2001-01-01/5_5va_video.wmv
+2001-01-01/5_5vb_video.wmv
+2001-01-01/5va_video.wmv
+2001-01-01/5vb_video.wmv
+2001-01-01/5vc_video.wmv
+2001-01-01/7va_video.wmv
+2001-01-01/7vb_video.wmv
+2001-01-01/8va_video.wmv
+2001-01-01/8vb_video.wmv
+2001-01-01/8vc_video.wmv
+2001-01-01/9va_video.wmv
+2001-01-01/9vb_video.wmv
